--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
          </div>
          <div class="button">
          <div>
-          <button> <img src="img/grilled-chicken 1.png" alt=""></button>
+          <button> <img src="img/grilled-chicken 1.png" alt=""> </button>
             </div>
             <div>
-           <button> <img src="img/fresh-salad 1.png" alt=""></button>
+           <button> <img src="img/fresh-salad 1.png" alt=""></p></button>
             </div>
         </div>
          <div class="meny">
