--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="healthy_snack ">
 
                 <div class="imag-fruit">
-                    <img src="/img/150351-01 1.png" alt="imag-Fruit">
+                    <img src="img/150351-01 1.png" alt="imag-Fruit">
                 </div>
 
                 <div class="snack_message">
