--- a/index.html
+++ b/index.html
@@ -10,18 +10,21 @@
 </head>
 <div class="wraper">
     <header>
+
         <div class="logo_header">
             <img src="img/image_logo.png" alt="logo">
         </div>
+
         <div class="menu">
             <button class="menu black">Menu</button>
             <button class="about">About Us </button>
             <button class="fruts">Fruts</button>
             <button class="pricing">Pricing </button>
             <div class="line">
-                <img src="/img/Line 9.png" alt="imag_line">
+                <img src="img/Line 9.png" alt="imag_line">
             </div>
         </div>
+
         <div class="button_sing">
             <button class="sing_up"><img src="img/button_sing_UP.png" alt="sing_up"></button>
         </div>
@@ -73,6 +76,7 @@
 
             </div>
 
+
             <div class="healthy_snack ">
 
                 <div class="imag-fruit">
@@ -109,14 +113,13 @@
                                 <p>150+</p>
                             </div>
 
-                            <div class="line_franchises">
+                            <div class="line_clients">
                                 <img src="img/Line 1.png" alt="imag-line">
                             </div>
 
                             <div class="global_franchises">
                                 <p>Global Franchises</p>
                             </div>
-
                         </div>
 
                         <div class="global">
@@ -133,7 +136,7 @@
                                 <p>100%</p>
                             </div>
 
-                            <div class="line_franchises">
+                            <div class="line_clients">
                                 <img src="img/Line 1.png" alt="imag-line">
                             </div>
 
@@ -145,7 +148,7 @@
                         <div class="global">
 
                             <div class="round">
-                                
+
 
                                 <div class="number">
                                     <p>2</p>
@@ -157,7 +160,7 @@
                                 <p>97%</p>
                             </div>
 
-                            <div class="line_franchises">
+                            <div class="line_clients">
                                 <img src="img/Line 1.png" alt="imag-line">
                             </div>
 
@@ -178,7 +181,7 @@
                                 <p>10M+</p>
                             </div>
 
-                            <div class="line_franchises">
+                            <div class="line_clients">
                                 <img src="img/Line 1.png" alt="imag-line">
                             </div>
 
@@ -186,16 +189,188 @@
                                 <p>Monthly Sales</p>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+            <div class="our_goal">
+                <div class="info_delivery">
 
+                    <h3>Our purpose is to deliver fresh fruit to you</h3>
+                    <p>Fruits and vegetables contain many vitamins and minerals that are good for your health. These
+                        include
+                        vitamins</p>
+                </div>
+
+                <div class="delivery">
+
+                    <div class="round">
+
+                        <div class="number">
+                            <p>1</p>
+                        </div>
+
+                        <div class="delivery_mesag">
+                            <div>
+                                <h4>Order Your Fruit</h4>
+                            </div>
+
+                            <div>
+                                <p>A serve of fruit is about one medium piece</p>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="round">
+
+                        <div class="number">
+                            <p>2</p>
+                        </div>
+                        <div class="delivery_mesag">
+                            <div>
+                                <h4>Delivery and Pickup</h4>
+                            </div>
+
+                            <div>
+                                <p>A serve of vegetables is about one cup of raw </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="fruit">
+                <div>
+                    <img src="img/apple.png" alt="imag-apple">
+                </div>
+
+                <div>
+                    <img src="img/pear.png" alt="imag-pear">
+                </div>
+
+                <div>
+                    <img src="img/dragon fruit.png" alt="imag-dragon fruit">
+                </div>
+
+                <div>
+                    <img src="img/carambola.png" alt="imag-carambola">
+                </div>
+
+                <div>
+                    <img src="img/avocado.png" alt="imag-avocado">
+                </div>
+
+                <div>
+                    <img src="img/papaya.png" alt="imag-papaya">
+                </div>
+            </div>
+
+
+
+            <div class="add_to_cart">
+
+
+                <div class="fruit_add">
+                    <div>
+                        <img src="img/cherry.png" alt="imag-cherry">
+
+                    </div>
+
+                    <h4>Cherries</h4>
+
+                    <div>
+                        <img src="img/Star 1.png" alt="imag-star">
+                        <img src="img/Star 1.png" alt="imag-star">
+                        <img src="img/Star 1.png" alt="imag-star">
+                        <img src="img/Star 1.png" alt="imag-star">
+                        <img src="img/Star 1.png" alt="imag-star">
+                    </div>
+                    <div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam </p>
+                    </div>
+
+                    <div>
+                        <img src="img/button_add.png" alt="">
                     </div>
 
 
                 </div>
 
+                <div class="fruit_add">
+                    <div>
+                        <img src="img/Amalaki.png" alt="imag-Amalaki">
+
+                    </div>
+
+                    <h4>Amalaki</h4>
+
+                    <div>
+                        <img src="img/Star 1.png" alt="imag-star">
+                        <img src="img/Star 1.png" alt="imag-star">
+                        <img src="img/Star 1.png" alt="imag-star">
+                        <img src="img/Star 1.png" alt="imag-star">
+                        <img src="img/Star 1.png" alt="imag-star">
+                    </div>
+                    <div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam </p>
+                    </div>
+
+                    <div>
+                        <img src="img/button_add.png" alt="">
+                    </div>
+
+
+                </div>
+
+                <div class="fruit_add">
+                    <div>
+                        <img src="img/Acai Berry.png" alt="imag-Acai Berry">
+
+                    </div>
+
+                    <h4>Acai Berry</h4>
+
+                    <div>
+                        <img src="img/Star 1.png" alt="imag-star">
+                        <img src="img/Star 1.png" alt="imag-star">
+                        <img src="img/Star 1.png" alt="imag-star">
+                        <img src="img/Star 1.png" alt="imag-star">
+                        <img src="img/Star 1.png" alt="imag-star">
+                    </div>
+                    <div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam </p>
+                    </div>
+
+                    <div>
+                        <img src="img/button_add.png" alt="">
+                    </div>
+
+
+                </div>
 
             </div>
 
 
+            <div class="subscription">
+
+                <div class="subscription_img">
+                    <img src="img/strawberry.png" alt="imag-strawberry">
+                </div>
+                <div class="subscription_message">
+                    <div>
+                        <h3>Subscribe Newsletter</h3>
+                    </div>
+
+                    <div>
+                        <p>Vegetables are available in many varieties and can be classified into biological groups or
+                            ‘families’, including</p>
+                    </div>
+
+                    <div class="input">
+                        <input value="Inter your mail"><button><img src="img/send.png" alt=""></button>
+                    </div>
+                </div>
+            </div>
 </div>
 
 </main>
