--- a/index.html
+++ b/index.html
@@ -371,12 +371,62 @@
                     </div>
                 </div>
             </div>
-</div>
 
-</main>
-</body>
-<footer>
-</footer>
+
+        </main>
+
+        <footer>
+            <div class="line_footer">
+                <img src="img/Line footer.png" alt="imag-line">
+            </div>
+
+            <div class="contact_footer">
+
+                <div class="logo_footer">
+                    <img src="img/logo-footer.png" alt="imag-logo">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipin elit.
+                        A eleifend tristique condimentum vestibulum, ornare tortor viverra.</p>
+                </div>
+
+                <div class="company">
+
+                    <ul>
+                        <li>
+                            <h4>Company</h4>
+                        </li>
+                        <li> <button>About Us</button></li>
+                        <li> <button>FAQ</button></li>
+                        <li><button>Contact us</button></li>
+                    </ul>
+                </div>
+
+                <div class="news">
+
+                    <ul>
+                        <li>
+                            <h4>News</h4>
+                        </li>
+                        <li><button>Features</button></li>
+                        <li><button>Testimonial</button></li>
+                        <li><button>Help</button></li>
+                    </ul>
+                </div>
+
+                <div class="socials">
+                    <h4>Socials</h4>
+                    <a href="#"><img src="img/fb.png" alt="logo-fb"></a>
+                    <a href="#"><img src="img/tw.png" alt="logo-tw"></a>
+
+                </div>
+
+                <div class="imag_footer">
+                    <img src="img/cherry footer.png" alt="">
+                </div>
+
+            </div>
+
+        </footer>
 </div>
+</body>
 
 </html>
